<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/my_details_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vp_shop_height_zero"
        android:layout_weight="0.8"
        android:background="@color/gm">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_back_dark_center"
            android:layout_marginLeft="@dimen/my_details_margin_left_ten"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/my_details_five"
            android:text="@string/my_details_denglu"
            android:textSize="@dimen/my_details_text_size_twenty" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/vp_shop_height_zero"
        android:layout_weight="9">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >




            <!-- 四个第三方 登入图片 -->
            <ImageView
                android:id="@+id/iv_login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_login_qq"
                android:layout_margin="@dimen/my_details_margin_left_twenty"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_details_qq"
                android:layout_marginLeft="@dimen/my_details_margin_left_twenty"
                android:layout_alignLeft="@id/iv_login_qq"
                android:layout_below="@id/iv_login_qq"/>

            <ImageView
                android:id="@+id/iv_login_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_login_wechat"
                android:layout_margin="@dimen/my_details_margin_left_twenty"
                android:layout_toRightOf="@id/iv_login_qq"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_details_weixin"
                android:layout_marginLeft="@dimen/my_details_margin_left_twenty"
                android:layout_alignLeft="@id/iv_login_wechat"
                android:layout_below="@id/iv_login_wechat"/>

            <ImageView
                android:id="@+id/iv_login_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_login_weibo"
                android:layout_margin="@dimen/my_details_margin_left_twenty"
                android:layout_toRightOf="@id/iv_login_wechat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_details_weibo"
                android:layout_marginLeft="@dimen/my_details_margin_left_twenty"
                android:layout_alignLeft="@id/iv_login_weibo"
                android:layout_below="@id/iv_login_wechat"/>


            <ImageView
                android:id="@+id/iv__login_boohee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_login_boohee"
                android:layout_margin="@dimen/my_delicacy_margin_ten"
                android:layout_toRightOf="@id/iv_login_weibo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_details_login_bohe"
                android:layout_marginLeft="@dimen/my_details_margin_left_twenty"
                android:layout_alignLeft="@id/iv__login_boohee"
                android:layout_below="@id/iv_login_wechat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_details_text"
                android:textColor="@color/evaluate_small_color"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/my_details_text_size_fifteen"
                android:layout_above="@id/iv_login_wechat"/>

            <!-- 最下面 的 图片-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@mipmap/img_tomato_bread" />
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>