<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_set_details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vp_shop_height_zero"
        android:layout_weight="0.8"
        android:background="@color/gm">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/my_set_details_ten"
            android:src="@mipmap/ic_back_dark_center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/my_set_details_five"
            android:text="@string/my_set_details_set"
            android:textSize="@dimen/my_set_details_text_size_twenty" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_height_zero"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/my_photo_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_height_zero"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:layout_width="@dimen/my_width_zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/my_set_details_fifteen"
                android:layout_weight="8"
                android:text="@string/my_set_dele" />

            <ImageView
                android:layout_width="@dimen/my_width_zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right_normal" />


        </LinearLayout>

        <include layout="@layout/line_horizontal" />

        <!-- 第二行 我的收藏 -->

        <LinearLayout
            android:id="@+id/my_collect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_height_zero"
            android:layout_weight="1"

            android:orientation="horizontal">


            <TextView
                android:layout_width="@dimen/my_width_zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/my_set_margin_left_fifteen"
                android:layout_weight="8"
                android:text="@string/my_set_jianyi" />

            <ImageView
                android:layout_width="@dimen/my_width_zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right_normal" />


        </LinearLayout>

        <include layout="@layout/line_horizontal" />
        <!-- 第三行 上传食物数据-->
        <LinearLayout
            android:id="@+id/my_upload"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_height_zero"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:layout_width="@dimen/my_width_zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/my_set_margin_left_fifteen"
                android:layout_weight="8"
                android:text="@string/my_set_pingfen" />

            <ImageView
                android:layout_width="@dimen/my_width_zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right_normal" />


        </LinearLayout>

        <include layout="@layout/line_horizontal" />

        <!-- 第四行 我的订单-->

        <LinearLayout
            android:id="@+id/my_order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_height_zero"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/my_width_zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/my_set_margin_margin_left_fifteen"
                android:layout_weight="8"
                android:text="@string/my_set_fenxiangfriend" />

            <ImageView
                android:layout_width="@dimen/my_width_zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right_normal" />


        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/line_horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height_zero"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_set_ten"
            android:gravity="center_horizontal"
            android:text="@string/my_set_banben"
            android:textColor="@color/evaluate_small_color"
            android:textSize="@dimen/my_set_thirteen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height_zero"
        android:layout_weight="5">

    </LinearLayout>


</LinearLayout>