<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dong.foodsect.activity.KnowledgeDetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/gm">


        <ImageView
            android:id="@+id/know_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mq_ic_back"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/knowledge_zixun"
            android:layout_marginRight="@dimen/knowledge_margin_right_fifteen"
            />


    </LinearLayout>
<include layout="@layout/line_horizontal_long"/>

    <WebView
        android:id="@+id/knowledge_web"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_page_height_zero"
        android:layout_weight="8" />

    <include layout="@layout/line_horizontal_long"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_page_height_zero"
        android:layout_weight="1"
        android:background="@color/gm"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/knowledge_share_ll"
            android:layout_width="@dimen/home_page_height_zero"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_photo_share"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knowledge_share"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/knowledge_collect_ll"
            android:layout_width="@dimen/home_page_height_zero"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_news_keep_default"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knowledge_shoucang"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>



    </LinearLayout>



</LinearLayout>
